# Visualize-Speculative-Decoding

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
backend/: CLAUDE.md  config.py  draft_model.py  interfaces.py  main.py  metrics.py  rejection_sampling.py  schemas.py  speculator.py  target_model.py
backend/tests/: test_speculator.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AcceptanceGauge.tsx  KPIDashboard.tsx  LatencyChart.tsx  Layout.tsx  PromptInput.tsx  SpeedupIndicator.tsx  TPSChart.tsx  TextOutput.tsx  TokenTree.tsx
frontend/src/hooks/: useSpecDecState.ts  useWebSocket.ts
frontend/src/lib/: camelCase.ts  colors.ts  styles.ts  treeLayout.ts  treeUtils.ts
frontend/src/types/: index.ts
